Fix for WSIT Issue 284
svn path=/trunk/; revision=1534


Former-commit-id: 1fdb5550937e03b0a7511f0fb72d9c212d8a1bcd